package org.demo.shopping.productmanagement.controller;

import org.demo.shopping.productmanagement.model.Attribute;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RequestMethod;
import org.springframework.web.bind.annotation.RestController;

@RestController
public class HealthCheckController {

    @RequestMapping(value = "/healthcheck", method = RequestMethod.GET)
    public String HealthCheck(@Value("${helloMessage}") String helloMessage){

        return helloMessage;

    }
}

